--- a/Raccoon_Randomize_Electron/mainWindow.html
+++ b/Raccoon_Randomize_Electron/mainWindow.html
@@ -51,15 +51,35 @@
                 <h2><span style="color: orangered">YouTube</span> Downloader</h2>
                 <input id="url" type="text" placeholder="http://">
                 <p id="ytdl_title">= ^ w ^ =</p>
-                <button id="downloadButton" class="deActiveBtn">
-                    <h3>Wprowadź link</h3>
-                </button>
+                <div class="radioAndBtn">
+                    <button id="downloadButton" class="deActiveBtn">
+                        <h3>Wprowadź link</h3>
+                    </button>
+                    <form id="ytdl_RadioForm">
+                        <div class="radioLabel" >
+                            <input type="radio" id="radio_mp3" name="ytd_radio" value="mp3" checked>
+                            <label class="radioLabel" for="radio_mp3"> Muzyka</label>
+                        </div>
+                        <div class="radioLabel" >
+                            <input type="radio" id="radio_mp4" name="ytd_radio" value="mp4">
+                            <label for="radio_mp4"> Wideo</label>
+                        </div>
+                    </form>
+                </div>
                 <img id="downloadPic" class="downloadPicDeActive" src="./assets/load.gif">
             </div>
         </div>
 
         <script src="js-func.js"></script>
         <script>
+            var YTD_radio = document.getElementsByName('ytd_radio');
+            console.log(YTD_radio);
+            YTD_radio.forEach(radio => {
+                    radio.addEventListener('click', (e) => {
+                    //console.log("Radio: " + e.target.value);
+                    setYTD_Radio(e.target.value);
+                });
+            });
 
             // ------------ movement vv
             // get disks
@@ -108,7 +128,7 @@
 
             document.querySelector('#downloadButton').addEventListener('click', (e) => {
                 if (document.querySelector('#url').value != "") {
-                    yt_downloader(document.querySelector('#url').value);
+                    yt_downloader_btn(document.querySelector('#url').value);
                 } else {
                     console.log("Nieprawidowy link.");
                 }
