Update with radio fix
- Block radio btn
- download animation

--- a/Raccoon_Randomize_Electron/mainWindow.html
+++ b/Raccoon_Randomize_Electron/mainWindow.html
@@ -51,6 +51,7 @@
                 <h2><span style="color: orangered">YouTube</span> Downloader</h2>
                 <input id="url" type="text" placeholder="http://">
                 <p id="ytdl_title">= ^ w ^ =</p>
+                <!-- FIXME: User should can adding him own title -->
                 <div class="radioAndBtn">
                     <button id="downloadButton" class="deActiveBtn">
                         <h3>Wprowadź link</h3>
